# scrt-evolve

./: .gitignore  AGENTS.md  CHANGELOG.md  COMPLETED.md  Cargo.toml  DESIGN.md  HANDOFF.md  LICENSE  PORTABILITY.md  README.md  SPIKE-NOTES.md
.claude/: settings.json
.github/workflows/: ci.yml
bench/: RUNBOOK.md  ambient-granite.toml  ambient.toml  branch-scrt-cli.toml  evolve.toml  harvest_claude_projects.py  scrt-cli-ambient.cmd
bench/seam_distill/: DISTILL.md  RESULTS.md  convert_teacher_safetensors.py  probe_env.py  run_distill_branch.sh  seam_distill_tinyllama.py
conductor/: .conductor_session_log  HANDOFF.md  RETRO.md  UX-REVIEW.md  code-styleguides.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/tracks/00-repo-skeleton-config/: metadata.json  plan.md  spec.md
conductor/tracks/01-discover/: SIGN-OFF.md  plan.md  spec.md
conductor/tracks/02-generate-api-backend/: metadata.json  plan.md  spec.md
conductor/tracks/03-generate-local-candle/: metadata.json  plan.md  spec.md
conductor/tracks/04-train-lora/: SIGN-OFF.md  plan.md  spec.md
conductor/tracks/05-train-contrastive/: plan.md  spec.md
conductor/tracks/06-train-full-pretrain/: plan.md  spec.md
conductor/tracks/07-train-shard/: plan.md  spec.md
conductor/tracks/08-extract-publish/: API-SURFACE.md  DECISION-in-tree-crate.md  metadata.json  plan.md  spec.md
conductor/tracks/09-modalities-skill-reasoning/: plan.md  spec.md
conductor/tracks/10-eval-harness/: SIGN-OFF.md  plan.md  spec.md
conductor/tracks/11-regen-antagonist/: plan.md  spec.md
conductor/tracks/12-self-refine-constitutional/: plan.md  spec.md
conductor/tracks/13-attribution-training-mask/: plan.md  spec.md
conductor/tracks/14-expert-spawn-router/: plan.md  spec.md
conductor/tracks/15-self-regulation/: metadata.json  plan.md  spec.md
conductor/tracks/16-dag-engine/: plan.md  spec.md
conductor/tracks/17-architecture-self-distill/: plan.md  spec.md
conductor/tracks/18-sdk-builder-interface/: plan.md  spec.md
conductor/tracks/19-python-train-infer/: metadata.json  plan.md  spec.md
conductor/tracks/20-learning-by-doing/: SIGN-OFF.md  metadata.json  plan.md  spec.md
conductor/tracks/21-taste-modules/: plan.md  spec.md
conductor/tracks/22-meta-objects/: plan.md  spec.md
conductor/tracks/23-quantized-base-training/: SIGN-OFF.md  plan.md  spec.md
conductor/tracks/24-benchmarks/: metadata.json  plan.md  spec.md
conductor/tracks/25-fractional-microshard-training/: SIGN-OFF.md  plan.md  spec.md
conductor/tracks/26-ambient-continuous-evolution/: plan.md  spec.md
conductor/tracks/27-config-driven-export/: SIGN-OFF.md  metadata.json  plan.md  spec.md
conductor/tracks/28-packaging-portability/: metadata.json  plan.md  spec.md
conductor/tracks/29-branch-factory/: plan.md  spec.md
conductor/tracks/30-closeout/: metadata.json  plan.md  spec.md
conductor/tracks/31-ambient-daemon-hardening/: metadata.json  plan.md  spec.md
conductor/tracks/32-regression-gate/: metadata.json  spec.md
conductor/tracks/33-concurrent-inference-during-training/: PASSOFF.md  metadata.json  plan.md  spec.md
conductor/tracks/36-install-ux/: metadata.json  plan.md  spec.md
conductor/tracks/37-training-signal-hardening/: metadata.json  plan.md  spec.md
conductor/tracks/39-native-inference/: coverage-matrix.md  metadata.json  parity-report.md  plan.md  retirement-checklist.md  spec.md
conductor/tracks/40-delegation-contract/: metadata.json  spec.md
conductor/tracks/_archived/: README.md
conductor/tracks/_archived/05-train-contrastive/: metadata.json  plan.md  spec.md
conductor/tracks/_archived/06-train-full-pretrain/: metadata.json  plan.md  spec.md
conductor/tracks/_archived/07-train-shard/: metadata.json  (+2 more)
crates/scrt-evolve/: Cargo.toml
crates/scrt-evolve-cli/: Cargo.toml
crates/scrt-evolve-cli/src/: config_reference.rs  main.rs
crates/scrt-evolve-cli/tests/: branch_cli.rs
crates/scrt-evolve/src/: AGENTS.md  arbitration.rs  bridge.rs  config.rs  daemon.rs  dataset.rs  directive.rs  discover.rs  export.rs  goals.rs  harvest.rs  ingest.rs  ingest_ledger.rs  interview.rs  judge.rs  lib.rs  living_queue.rs  model.rs  model_store.rs  nudge.rs  project.rs  rounds.rs  scaffold.rs  toolspec.rs  trend.rs  workdir.rs
crates/scrt-evolve/src/branch/: create.rs  manifest.rs  mod.rs  router.rs
crates/scrt-evolve/src/eval/: degrade.rs  gate.rs  mod.rs  probe.rs  score.rs  verdict.rs
crates/scrt-evolve/src/generate/: AGENTS.md  api.rs  local.rs  mod.rs  prompts.rs
crates/scrt-evolve/src/model/: arch.rs
crates/scrt-evolve/src/plan/: critic.rs  mod.rs  planner.rs  signals.rs
crates/scrt-evolve/src/regulate/: checkpoint.rs  log.rs  mod.rs  quarantine.rs  txn.rs
crates/scrt-evolve/src/serve/: loader.rs  mod.rs
crates/scrt-evolve/src/serve/ops/: AGENTS.md  mod.rs  ssd.rs
crates/scrt-evolve/src/train/: contrastive.rs  full.rs  lora.rs  mod.rs  pretrain.rs  shard.rs
crates/scrt-evolve/tests/: branch.rs  config.rs  dataset.rs  discover.rs  eval.rs  export.rs  generate.rs  generate_local.rs  goals.rs  harvest.rs  ml_free_default.rs  modalities.rs  plan.rs  project.rs  regulate.rs  rounds.rs  scaffold.rs  ssd_scan.rs  train_lora.rs  workdir.rs
demo/: benchmark.py  evolve.toml
demo/work/: dataset.jsonl  dataset.static.bak  directive.json  discovered.json  finetune-chat.jsonl  finetune-train.txt  plan.json
python/: README.md  pyproject.toml
python/scrt_evolve_dequant/: __init__.py  __main__.py  archspec.py  dequant.py
python/scrt_evolve_gguf/: README.md  __init__.py  __main__.py  export.py  merge_shards.py
python/scrt_evolve_infer/: README.md  __init__.py  __main__.py  infer.py  lora_to_gguf.py
python/scrt_evolve_score/: __init__.py  __main__.py  score.py
python/scrt_evolve_train/: AGENTS.md  README.md  __init__.py  __main__.py  qat.py  shard.py  trainer.py
python/tests/: test_merge_shards.py  test_shard.py  test_track23.py  test_track33_swap.py
run-tinyllama/: .gitignore  evolve.toml  probes-quick.txt  probes.txt
scripts/: install.ps1  install.sh
skills/scrt-evolve/: SKILL.md
(+82 files in other folders)
